--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="Project Template, Project Page">
-    <meta name="description" content="academic-project-page-template-vue">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <title>Academic Project Page Template Vue</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="keywords" content="Enerverse2, AgiBot">
+  <meta name="description" content="Enerverse2.0 project-page">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+  <title>Enerverse2.0</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
