--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="keywords" content="Enerverse2, AgiBot">
-  <meta name="description" content="Enerverse2.0 project-page">
+  <meta name="keywords" content="Genie Envisioner, AgiBot">
+  <meta name="description" content="Genie Envisioner project-page">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-  <title>Enerverse2.0</title>
+  <title>Genie Envisioner</title>
 </head>
 
 <body>
